<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ctl_operations"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@color/black"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_principal_value"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:gravity="center"
            android:text="@string/principal_value"
            android:textColor="@color/white"
            android:textSize="42sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:gravity="center"
            android:paddingBottom="30dp"
            android:text="@string/result"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/txt_principal_value" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_plus"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:padding="15dp"
        android:text="@string/plus_button"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ctl_operations" />

    <Button
        android:id="@+id/btn_minus"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:padding="15dp"
        android:text="@string/minus_button"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ctl_operations" />

    <Button
        android:id="@+id/btn_clean_values"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:padding="10dp"
        android:text="@string/clean_values"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_plus" />

</androidx.constraintlayout.widget.ConstraintLayout>